# stratagraph

./: CMakeLists.txt  README.md
benchmarks/: event_log_bench.c  l1_bench.c
include/: event_log.h  l1.h  l2.h  snapshot_reader.h
src/: event_log.c  l1.c  l2.c  snapshot_reader.c
